# aesara

./: .appveyor.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESCRIPTION.txt  EMAIL.txt  HISTORY.txt  MANIFEST.in  Makefile  NEWS.txt  NEWS_DEV.txt  README.md  README.rst  codecov.yml  conftest.py  environment-arm.yml  environment.yml  pyproject.toml  readthedocs.yml  requirement-rtd.txt  requirements-rtd.txt  requirements.txt  setup.cfg  setup.py  stored-array.npy  versioneer.py
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  jax_op_implementation.yml  new_feature_request.yml  numba_op_implementation.yml  numpy_compatibility.yml  scipy_compatibility.yml
.github/workflows/: check-commit-message.yml  dev-builds.yml  docs.yml  nightly.py  nightly.yml  paper_ci.yml  pypi.yml  test.yml  update-gha.yml  update-pre-commit.yml
.jenkins/: jenkins_pr_pretest.sh
.travis/: travis_before_install.sh  travis_install.sh
aesara/: __init__.py  _version.py  assert_op.py  breakpoint.py  configdefaults.py  configparser.py  gradient.py  ifelse.py  issubtype.py  printing.py  raise_op.py  updates.py  utils.py  version.py
aesara-env/: pyvenv.cfg
aesara-env/Scripts/: activate  activate.bat
aesara/compile/: __init__.py  builders.py  compiledir.py  compilelock.py  debugmode.py  function.py  function_module.py  io.py  mode.py  monitormode.py  nanguardmode.py  ops.py  pfunc.py  profiling.py  sharedvalue.py
aesara/d3viz/: __init__.py  d3viz.py  formatting.py
aesara/gof/: __init__.py  callcache.py  cc.py  cmodule.py  compiledir.py  compilelock.py  cutils.py  destroyhandler.py  fg.py  graph.py  lazylinker_c.py  link.py  null_type.py  op.py  opt.py  optdb.py  params_type.py  sched.py  toolbox.py  type.py  unify.py  utils.py  vm.py
aesara/gpuarray/: __init__.py  basic_ops.py  blas.py  blocksparse.py  ctc.py  cudnn_defs.py  dnn.py  dnn_opt.py  elemwise.py  extra_ops.py  fft.py  kernel_codegen.py  linalg.py  multinomial.py  neighbours.py  nerv.py  nnet.py  opt.py  opt_util.py  optdb.py  pathparse.py  pool.py  reduction.py  rng_mrg.py  sort.py  subtensor.py  type.py
aesara/graph/: __init__.py  basic.py  callcache.py  destroyhandler.py  features.py  fg.py  kanren.py  null_type.py  op.py  opt.py  opt_utils.py  optdb.py  params_type.py  sched.py  toolbox.py  type.py  unify.py  utils.py
aesara/link/: __init__.py  basic.py  utils.py  vm.py
aesara/misc/: burn_gpu.py  check_blas.py  check_blas_many.sh  check_duplicate_key.py  check_multi_gpu.py  cpucount.py  do_nightly_build  do_nightly_build_send  doubleop.py  elemwise_openmp_speedup.py  elemwise_time_test.py  frozendict.py  latence_gpu_transfert.py  may_share_memory.py  ordered_set.py  pkl_utils.py  safe_asarray.py
aesara/sandbox/: blocksparse.py  conv.py  fourier.py  jax_linker.py  jaxify.py  minimal.py  multinomial.py  neighbours.py  rng_mrg.py  softsign.py  solve.py
aesara/scalar/: __init__.py  basic.py  basic_scipy.py  basic_sympy.py  math.py  sharedvar.py
aesara/scan/: __init__.py  basic.py  checkpoints.py  op.py  opt.py  rewriting.py  scan_perform.pyx  scan_perform_ext.py  utils.py  views.py
aesara/scan_module/: __init__.py  scan.py  scan_checkpoints.py  scan_op.py  scan_opt.py  scan_perform.pyx  scan_perform_ext.py  scan_utils.py  scan_views.py
aesara/sparse/: __init__.py  basic.py  opt.py  rewriting.py  sharedvar.py  type.py  utils.py
aesara/tensor/: __init__.py  basic.py  basic_opt.py  blas.py  blas_c.py  blas_headers.py  blas_scipy.py  blockwise.py  elemwise.py  elemwise_cgen.py  exceptions.py  extra_ops.py  fft.py  fourier.py  inplace.py  io.py  linalg.py  math.py  math_opt.py  nlinalg.py  opt.py  opt_uncanonicalize.py  raw_random.py  shape.py  shared_randomstreams.py  sharedvar.py  slinalg.py  sort.py  special.py  subtensor.py  subtensor_opt.py  type.py  type_other.py  utils.py  var.py  xlogx.py
aesara/typed_list/: __init__.py  basic.py  opt.py  rewriting.py  type.py
aesara_paper/: paper.md
conda/: meta.yaml
doc/: JaxOps.rst  LICENSE.txt  acknowledgement.rst  acknowledgement.txt  aesara-full.bib  aesara-short.bib  aesara_installer_for_anaconda.bat  citation.txt  conf.py  config.rst  core_development_guide.rst  core_development_guide.txt  dev_start_guide.rst  dev_start_guide.txt  environment.yml  faq.rst  faq.txt  generate_dtype_tensor_table.py  glossary.rst  glossary.txt  help.rst  how_to_think_in_aesara.rst  index.rst  index.txt  install.rst  install.txt  install_centos6.rst  install_centos6.txt  install_generic.inc  install_macos.rst  install_macos.txt  install_others.txt  install_ubuntu.rst  install_ubuntu.txt  install_windows.rst  install_windows.txt  introduction.rst  introduction.txt  links.rst  links.txt  (+10 more)
doc/.static/: version_switch.js
doc/cifarSC2011/: advanced_aesara.txt  advanced_theano.txt  aesara.txt  boot_camp_overview.txt  gpundarray.txt  index.txt  introduction.txt  pyCUDA.txt  theano.txt
doc/compile/: function.rst  index.rst  io.rst  modes.rst  modes_solution_1.py  shared.rst
doc/crei2013/: advanced_aesara.txt  advanced_theano.txt  aesara.txt  gpundarray.txt  ifelse_switch.py  index.txt  introduction.txt  logreg.py  logreg_profile.prof  scan_poly.py  scan_pow.py
doc/extend/: index.rst  rewrite.rst
doc/extending/: aesara_vs_c.rst  (+48 more)
notebooks/: Dev_ClassGraph.ipynb  JaxOps.ipynb
tests/: breakpoint.py  disturb_mem.py  diverse_tests.py  record.py  test_2nd_order_grads.py  test_breakpoint.py  test_config.py  test_determinism.py  test_dictionary_output.py  test_gradient.py  test_ifelse.py  test_pickle_unpickle_aesara_fn.py  test_pickle_unpickle_theano_fn.py  test_printing.py  test_raise_op.py  test_record.py  test_rop.py  test_updates.py  test_utils.py  unittest_tools.py
theano/: __init__.py  _version.py  assert_op.py  breakpoint.py  compat.py  configdefaults.py  configparser.py  gradient.py  ifelse.py  pathparse.py  printing.py  raise_op.py  updates.py  utils.py  version.py
(+975 files in other folders)
