[build-system]
requires = [
    "hatchling >=1.11.1,<2.0.0",
    "hatch-vcs >=0.3.0,<0.4.0",
]
build-backend = "hatchling.build"

[project]
name = "aesara"
authors = [{name = "aesara-devs", email = "aesara.devs@gmail.com"}]
description = "A library for defining, optimizing, and efficiently evaluating mathematical expressions involving multi-dimensional arrays."
license.text = "BSD-3-Clause"
license-files.paths = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: SunOS/Solaris",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = [
    "aesara",
    "math",
    "numerical",
    "symbolic",
    "blas",
    "numpy",
    "autodiff",
    "differentiation",
]
urls = {Homepage = "https://github.com/aesara-devs/aesara"}
requires-python = ">=3.8"
dependencies = [
    "numpy >=1.17.0",
    "scipy >=0.14",
    "filelock",
    "etuples",
    "logical-unification",
    "miniKanren",
    "cons",
    "typing_extensions",
    "setuptools >=48.0.0",
]
dynamic = ["version"]

[project.readme]
file = "DESCRIPTION.txt"
content-type = "text/x-rst"

[project.scripts]
aesara-cache = "aesara.bin.aesara_cache:main"

[tool.hatch.version]
source = "vcs"
# Restrict the default regex to only match tags that start with "rel-".
tag-pattern = '^rel-(?P<version>[vV]?\d+(?:\.\d+){0,2}[^\+]*)(?:\+.*)?$'

[tool.hatch.build.hooks.vcs]
version-file = "aesara/_version.py"

[tool.hatch.build]
# While the sdist can be made much smaller by omiting the docs,
# it is useful to certain people to include the docs and tests.
# Ref: <https://github.com/aesara-devs/aesara/discussions/1453>
exclude = [
    "/.github",
    "/.flake8",
    "/.gitignore",
    "/.hgignore",
    "/.pre-commit-config.yaml",
    "/.github/CODE_OF_CONDUCT.md",
    "/.github/CONTRIBUTING.md",
    "Makefile",
    "codecov.yml",
    "environment-arm.yml",
    "environment.yml",
    "readthedocs.yml",
]

[tool.hatch.build.targets.wheel]
packages = ["aesara", "bin"]

[tool.coverage.run]
omit = [
    "tests/*",
    "aesara/assert_op.py",
    "aesara/version.py",
    "aesara/bin/aesara_cache.py",
    "aesara/graph/opt.py",
    "aesara/graph/opt_utils.py",
    "aesara/graph/optdb.py",
    "aesara/graph/kanren.py",
    "aesara/graph/unify.py",
    "aesara/link/jax/jax_linker.py",
    "aesara/link/jax/jax_dispatch.py",
    "aesara/graph/toolbox.py",
    "aesara/scalar/basic_scipy.py",
    "bin/aesara_cache.py",
]
branch = true
relative_files = true

[tool.coverage.report]
omit = [
    "tests/*",
]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.pytest.ini_options]
addopts = "--durations=50"
testpaths = ["tests/"]

[tool.pylint]
max-line-length = "88"

[tool."pylint.messages_control"]
disable = "C0330, C0326"

[tool.isort]
profile = "black"
lines_after_imports = 2
lines_between_sections = 1
honor_noqa = true
skip_gitignore = true
skip = ["aesara/version.py"]
skip_glob = ["**/*.pyx"]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = false
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = false
warn_unreachable = true
show_error_codes = true
allow_redefinition = false
files = ["aesara", "tests"]
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = ["doc.*"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["setup"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.compile.mode"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.compile.builders"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.compile.sharedvalue"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.compile.compilelock"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.compile.function.pfunc"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.compile.function.types"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.compile.debugmode"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.type"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.var"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.basic"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.elemwise"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.math"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.rewriting.basic"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.rewriting.shape"]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.rewriting.elemwise"]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.subtensor"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.shape"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.extra_ops"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.type_other"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.blas"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.blas_headers"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.slinalg"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.sharedvar"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.rewriting.math"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.blas_c"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.random.op"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.random.basic"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.random.utils"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.scan.op"]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["aesara.link.numba.dispatch.extra_ops"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.link.numba.dispatch.elemwise"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.link.numba.dispatch.random"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.link.jax.dispatch"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.raise_op"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.nnet.conv3d2d"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.nnet.neighbours"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.nnet.abstract_conv"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.tensor.nnet.ctc"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.sandbox.*"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.ifelse"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.typed_list.*"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.sparse.basic"]
ignore_errors = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aesara.sparse.sharedvar"]
ignore_errors = true
check_untyped_defs = false
